// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms|lists Definition list 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__atom"
    >
      <dd
        class="list"
      >
        <dt>
          Term Consectetur Mollis
        </dt>
         
        <dd>
          Description sed diam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
        </dd>
        <dt>
          Another Term Fringilla
        </dt>
         
        <dd>
          And descriprion commodo cursus magna, vel scelerisque nisl consectetur et.
        </dd>
        <dt>
          Term Inceptos Etiam
        </dt>
         
        <dd>
          Description mattis consectetur purus sit amet fermentum. Nullam id dolor id nibh ultricies vehicula ut id elit.
        </dd>
        <dt>
          And Another Term Etiam Fermentum
        </dt>
         
        <dd>
          And description mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
        </dd>
      </dd>
    </section>
  </section>
</section>
`;

exports[`Storyshots Atoms|lists Horizontal list 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__atom"
    >
      <section>
        <strong
          class="caption-list__headline"
        >
          
        Some label:
    
        </strong>
         
        <ul
          class="caption-list"
        >
          <li
            class="caption-list__list-item"
          >
            
            
            
            <a>
              Default list-item
            </a>
          </li>
          <li
            class="caption-list__list-item"
          >
            
            
            
            <a>
              Default list-item
            </a>
          </li>
          <li
            class="caption-list__list-item"
          >
            
            
            
            <a>
              Default list-item
            </a>
          </li>
          <li
            class="caption-list__list-item"
          >
            
            
            
            <a>
              Default list-item
            </a>
          </li>
          <li
            class="caption-list__list-item"
          >
            
            
            
            <a>
              Default list-item
            </a>
          </li>
          <li
            class="caption-list__list-item"
          >
            
            
            
            <a>
              Default list-item
            </a>
          </li>
        </ul>
      </section>
    </section>
  </section>
</section>
`;

exports[`Storyshots Atoms|lists Link list 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__atom"
    >
      <ul
        class="link-list"
      >
        <li
          class="link-list__item"
        >
          <a
            class="router-link-exact-active router-link-active undefined__link"
            href="#/"
          >
            <!---->
             Content-link
          </a>
        </li>
        <li
          class="link-list__item"
        >
          <a
            class="router-link-exact-active router-link-active undefined__link"
            href="#/"
          >
            <!---->
             Content-link
          </a>
        </li>
        <li
          class="link-list__item"
        >
          <a
            class="router-link-exact-active router-link-active undefined__link"
            href="#/"
          >
            <!---->
             Content-link
          </a>
        </li>
      </ul>
    </section>
  </section>
</section>
`;

exports[`Storyshots Atoms|lists Ordered list 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__atom"
    >
      <ol
        class="list"
      >
        <li
          class="list__item"
        >
          Default list-item
        </li>
        <li
          class="list__item"
        >
          Default list-item
        </li>
        <li
          class="list__item"
        >
          Default list-item
        </li>
      </ol>
    </section>
  </section>
</section>
`;

exports[`Storyshots Atoms|lists Tabbable Definition list 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__atom"
    >
      <section
        class="story__atom"
      >
        <dl
          class="tabbable-dl"
          style="height: 6px;"
        >
          <dt
            class="tabbable-dl__term tabbable-dl__term--vue"
            style="height: auto; opacity: 1; visibility: visible;"
          >
            <a
              class="tabbable-dl__link"
              role="button"
              tabindex="0"
            >
              <h3
                class="tabbable-dl__title"
              >
                <!---->
                
                    Term Consectetur Mollis
                
              </h3>
            </a>
          </dt>
           
          <dd
            class="tabbable-dl__desc tabbable-dl__desc--vue"
            style="margin-bottom: 0px; height: 30px; top: 0px;"
          >
            Description sed diam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
          </dd>
          <dt
            class="tabbable-dl__term tabbable-dl__term--vue"
            style="height: auto; opacity: 1; visibility: visible;"
          >
            <a
              class="tabbable-dl__link"
              role="button"
              tabindex="0"
            >
              <h3
                class="tabbable-dl__title"
              >
                <!---->
                
                    Another Term Fringilla
                
              </h3>
            </a>
          </dt>
           
          <dd
            class="tabbable-dl__desc tabbable-dl__desc--vue"
            style="margin-bottom: 0px; height: 0px; opacity: 0; visibility: hidden; top: 0px;"
          >
            And descriprion commodo cursus magna, vel scelerisque nisl consectetur et.
          </dd>
          <dt
            class="tabbable-dl__term tabbable-dl__term--vue"
            style="height: auto; opacity: 1; visibility: visible;"
          >
            <a
              class="tabbable-dl__link"
              role="button"
              tabindex="0"
            >
              <h3
                class="tabbable-dl__title"
              >
                <!---->
                
                    Term Inceptos Etiam
                
              </h3>
            </a>
          </dt>
           
          <dd
            class="tabbable-dl__desc tabbable-dl__desc--vue"
            style="margin-bottom: 0px; height: 0px; opacity: 0; visibility: hidden; top: 0px;"
          >
            Description mattis consectetur purus sit amet fermentum. Nullam id dolor id nibh ultricies vehicula ut id elit.
          </dd>
          <dt
            class="tabbable-dl__term tabbable-dl__term--vue"
            style="height: auto; opacity: 1; visibility: visible;"
          >
            <a
              class="tabbable-dl__link"
              role="button"
              tabindex="0"
            >
              <h3
                class="tabbable-dl__title"
              >
                <!---->
                
                    And Another Term Etiam Fermentum
                
              </h3>
            </a>
          </dt>
           
          <dd
            class="tabbable-dl__desc tabbable-dl__desc--vue"
            style="margin-bottom: 0px; height: 0px; opacity: 0; visibility: hidden; top: 0px;"
          >
            And description mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
          </dd>
        </dl>
      </section>
    </section>
  </section>
</section>
`;

exports[`Storyshots Atoms|lists Unordered list 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__atom"
    >
      <ul
        class="list"
      >
        <li
          class="list__item"
        >
          Default list-item
        </li>
        <li
          class="list__item"
        >
          Default list-item
        </li>
        <li
          class="list__item"
        >
          Default list-item
        </li>
      </ul>
    </section>
  </section>
</section>
`;
